[package]
name = "fuzzy_date"
version = "0.1.0"
edition = "2024"
rust-version = "1.87.0"
license = "MIT"
description = "A tiny Rust crate to represent dates with varying precision"
repository = "https://github.com/tcrypt25519/fuzzy_date"
keywords = ["date", "datetime", "partial", "fuzzy"]
categories = ["date-and-time"]
readme = "README.md"
authors = ["Tyler Smith <mail@tcry.pt>"]

[lib]
name = "fuzzy_date"
path = "src/lib.rs"

[dependencies]
derive_more = { version = "0.99", default-features = false, features = ["display", "deref", "from", "from_str", "into", "try_into"] }
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0"

[dev-dependencies]
serde_json = "1.0"

[lints.clippy]
correctness = { level = "deny", priority = -1 }
complexity = { level = "deny", priority = -1 }
suspicious = { level = "deny", priority = -1 }
style = { level = "deny", priority = -1 }
unwrap_used = "deny"
expect_used = "warn"

pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
perf = { level = "warn", priority = -1 }

cargo = { level = "warn", priority = -1 }
cargo_common_metadata = "deny"
multiple_crate_versions = "allow"

must_use_candidate = "allow"
cognitive_complexity = "allow"
